--- a/www/styles.css
+++ b/www/styles.css
@@ -1,10 +1,25 @@
 body {
   font-family: 'Spectral', 'Arial', 'Helvetica', sans-serif;
   font-weight: 400;
+  text-align: center;
+}
+
+h1 {
   margin: auto;
-  padding: 14px;
+  padding: 8px;
 }
 
 .container {
   display: flex;
+  flex-direction: column;
+}
+
+.container > div {
+  flex: 1;
+}
+
+@media (min-width: 1200px) {
+  .container {
+    flex-direction: row;
+  }
 }
